<resources>
    <string name="app_name">UniMag</string>
    <string name="activity_oplata_name">Oplata</string>
    <string name="title_catalog">Каталог</string>
    <string name="title_partner_program">Партнерская программа</string>
    <string name="title_personal_area">Личный кабинет</string>
    <string name="ip">192.168.0.85</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="register">Далее</string>
    <string name="registration">Зарегистрироваться</string>
    <string name="n">Ещё не зарегистрированы?\nЗарегистрируйтесь прямо сейчас!</string>
    <string name="vxod">Войти</string>
    <string name="vxod2">Вход</string>
    <string name="register2Top">Заполните необходимые данные!</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="secondSurname">Отчество</string>
    <string name="kod">Введите код, который был отправлен на вашу почту.</string>
    <string name="vvedite_kod">Введите код</string>
    <string name="title_basket">Корзина</string>
    <string name="login">Вход</string>
    <string name="allowed_symbols">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ()@_-*#:;!?.,\'\"{}[]0123456789\\/</string>
    <string name="allowed_symbols_name">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZАБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯабвгдеёжзийклмнопрстуфхцчшщъыьэюя-_ </string>
    <string name="allowed_numbers">0123456789</string>

    <string name="sort_price_by_DESC">Сортировать цену по убыванию</string>
    <string name="sort_price_by_ASC">Сортировать цену по возрастанию</string>
    <string name="without_sorting">Отменить сортировку</string>
    <string name="sort_by_time">Сортировать по новизне</string>
    <string name="sort_date_by_DESC">Показать сначала новые товары</string>

    <string name="btn_simple_example">Simple Example</string>
    <string name="btn_flexible_example">Flexible Example</string>

    <string name="lbl_amount">Цена:</string>
    <string name="lbl_ccy">Валюта:</string>
    <string name="lbl_email">Email:</string>
    <string name="lbl_description">Описание:</string>
    <string name="btn_pay_google">GooglePay</string>
    <string name="btn_pay_card">Оплатить картой</string>
    <string name="e_invalid_amount">Invalid amount</string>
    <string name="e_invalid_email">Invalid email</string>
    <string name="e_invalid_description">Enter description</string>
    <string name="e_google_pay_unsupported">GooglePay is not supported</string>
    <string name="e_google_pay_canceled">GooglePay has been canceled</string>
    <string name="sort_fragment">Фильтрация товаров</string>
    <string name="myCabinetFragment">Личный кабинет</string>
    <string name="feedbackFragment">Обратная связь</string>
    <string name="orderFragment">Мои заказы</string>
    <string name="registerFragment">Регистрация</string>
    <string name="fragment_edit_profile">Редактирование профиля</string>
    <string name="productFrafment">Информация о товаре</string>
    <string name="registerOrderFragment">Оформление заказа</string>
    <string name="informationAboutPartner">Партнер</string>
    <string name="noConnectionFragment">Нет соединения</string>
    <string name="fragment_oplata">Оплата</string>
    <string name="feedback_podskazka">*Номер телефона необходим, чтобы наш менджер смог связаться с Вами при необходимости</string>
    <string name="technicalWorkFragment">Технические работы</string>


    <string-array name="categories">
        <item>Все товары</item>
        <item>Одежда</item>
        <item>Сувениры</item>
    </string-array>

</resources>
