<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_catalog"
        android:icon="@drawable/ic_catalog_black_24_dp"
        android:title="@string/title_catalog"
        app:showAsAction="withText" />

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_news_black_24dp"
        android:title="@string/title_news"
        app:showAsAction="withText"/>

    <item
        android:id="@+id/navigation_basket"
        android:icon="@drawable/ic_shopping_cart_black"
        android:title="@string/title_basket"
        app:showAsAction="withText"/>

    <item
        android:id="@+id/navigation_personal_area"
        android:icon="@drawable/ic_personal_area_black_24dp"
        android:title="@string/title_personal_area"
        app:showAsAction="withText"/>

</menu>
