<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/kod"
        android:textSize="34sp" />

    <EditText
        android:id="@+id/kod"
        android:layout_width="@dimen/register_kod_width"
        android:layout_height="@dimen/register_kod_height"
        android:layout_margin="@dimen/register_kod_margin"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:hint="@string/vvedite_kod" />

    <Button
        android:id="@+id/register_button_kod"
        android:layout_width="200dp"
        android:layout_height="@dimen/register_text_height"
        android:layout_gravity="center_horizontal"
        android:text="@string/register" />
</LinearLayout>
