<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_catalog">

    <fragment
        android:id="@+id/navigation_catalog"
        android:name="com.example.unimag.ui.catalog.CatalogFragment"
        android:label="@string/title_catalog"
        tools:layout="@layout/fragment_catalog" />

    <fragment
        android:id="@+id/navigation_news"
        android:name="com.example.unimag.ui.news.NewsFragment"
        android:label="@string/title_news"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/navigation_basket"
        android:name="com.example.unimag.ui.basket.BasketFragment"
        android:label="@string/title_basket"
        tools:layout="@layout/fragment_basket" />

    <fragment
        android:id="@+id/navigation_personal_area"
        android:name="com.example.unimag.ui.personal_area.PersonalAreaFragment"
        android:label="@string/title_personal_area"
        tools:layout="@layout/fragment_personal_area" />
</navigation>
