<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".ui.register.RegisterFragment2">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/register2Top"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/register_text_height"
        android:layout_margin="@dimen/register_text_margin"
        android:hint="@string/name" />

    <EditText
        android:id="@+id/surname"
        android:layout_width="match_parent"
        android:layout_height="@dimen/register_text_height"
        android:layout_margin="@dimen/register_text_margin"
        android:hint="@string/surname" />

    <EditText
        android:id="@+id/secondSurname"
        android:layout_width="match_parent"
        android:layout_height="@dimen/register_text_height"
        android:layout_margin="@dimen/register_text_margin"
        android:hint="@string/secondSurname" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="Введите ваш день, месяц и год рождения."
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/register_text_height"
        android:gravity="center_horizontal"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/birthDay"
            android:layout_width="70dp"
            android:layout_height="@dimen/register_text_height"
            android:layout_margin="0dp"
            android:maxLength="2"
            android:hint="День" />

        <EditText
            android:id="@+id/birthMonth"
            android:layout_width="70dp"
            android:layout_height="@dimen/register_text_height"
            android:layout_margin="0dp"
            android:maxLength="2"
            android:hint="Месяц" />

        <EditText
            android:id="@+id/birthYear"
            android:layout_width="70dp"
            android:layout_height="@dimen/register_text_height"
            android:layout_margin="0dp"
            android:maxLength="4"
            android:hint="Год" />
    </LinearLayout>

    <Button
        android:id="@+id/register_button2"
        android:layout_width="200dp"
        android:layout_height="@dimen/register_text_height"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/register_text_margin"
        android:text="@string/register" />

</LinearLayout>
