<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.register.RegisterFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Регистрация"
                android:textSize="40sp"
                android:gravity="center"
                android:textStyle="bold"
                android:background="@color/light_black"
                android:textColor="@color/black"/>

            <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="@color/colorPrimary"
            android:digits="@string/allowed_symbols"
            android:hint="@string/email"
            android:maxLength="32" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:backgroundTint="@color/colorPrimary"
                android:digits="@string/allowed_symbols"
                android:maxLength="32"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <EditText
                    android:id="@+id/repeatPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:hint="@string/repeat_password"
                    android:inputType="textPassword"
                    android:backgroundTint="@color/colorPrimary"
                    android:digits="@string/allowed_symbols"
                    android:maxLength="32"/>

                <ImageButton
                    android:id="@+id/show_password_in_registr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:src="@drawable/ic_show_password"
                    android:background="@null" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:padding="10dp"
                android:gravity="center"
                android:text="Введите данные о себе:"
                android:textColor="@color/black"
                android:background="@color/light_black" />

            <EditText
                android:id="@+id/surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="@string/surname"
                android:backgroundTint="@color/colorPrimary"
                android:digits="@string/allowed_symbols_name"
                android:maxLength="32"/>

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="@string/name"
                android:backgroundTint="@color/colorPrimary"
                android:digits="@string/allowed_symbols_name"
                android:maxLength="32"/>

            <EditText
                android:id="@+id/secondSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="@string/secondSurname"
                android:backgroundTint="@color/colorPrimary"
                android:digits="@string/allowed_symbols_name"
                android:maxLength="32"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="День рождения:"
                android:textSize="25sp"
                android:background="@color/light_black"
                android:textColor="@color/black"
                android:padding="5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_margin="5dp">


                <EditText
                    android:id="@+id/birthDay"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:maxLength="2"
                    android:hint="День"
                    android:backgroundTint="@color/colorPrimary"
                    android:digits="@string/allowed_numbers"
                    android:inputType="number"/>

                <EditText
                    android:id="@+id/birthMonth"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:maxLength="2"
                    android:hint="Месяц"
                    android:backgroundTint="@color/colorPrimary"
                    android:digits="@string/allowed_numbers"
                    android:inputType="number"/>

                <EditText
                    android:id="@+id/birthYear"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:maxLength="4"
                    android:hint="Год"
                    android:backgroundTint="@color/colorPrimary"
                    android:digits="@string/allowed_numbers"
                    android:inputType="number"/>
            </LinearLayout>

            <TextView
                android:id="@+id/text_hint_registration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:textColor="@color/colorPrimary"/>

            <Button
                android:id="@+id/register_button"
                style="@style/ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/registration"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
