<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".ui.personal_area.EditProfileFragment"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical"
            android:background="@color/light_black">

        <ImageView
            android:id="@+id/edit_image_user"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="Личная информация"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/edit_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/surname"
            android:backgroundTint="@color/colorPrimary"
            android:digits="@string/allowed_symbols_name"
            android:maxLength="32"/>

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/name"
            android:backgroundTint="@color/colorPrimary"
            android:digits="@string/allowed_symbols_name"
            android:maxLength="32"/>

        <EditText
            android:id="@+id/edit_secondSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/secondSurname"
            android:backgroundTint="@color/colorPrimary"
            android:digits="@string/allowed_symbols_name"
            android:maxLength="32"/>


        <Button
            android:id="@+id/register_button2"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="Сохранить изменения"
            android:textSize="18sp"/>

    </LinearLayout>
</ScrollView>
