<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RadioGroup
        android:id="@+id/radioSortGroup"
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/radioButtonASC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_price_by_ASC" />

        <RadioButton
            android:id="@+id/radioButtonDESC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_price_by_DESC" />

        <RadioButton
            android:id="@+id/radioButtonWithout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/without_sorting" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="180dp"
        android:layout_height="30dp"
        android:text="Сортировка по категории"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.369" />

    <Spinner
        android:id="@+id/sortSpinner"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.097">

    </Spinner>

    <CheckBox
        android:id="@+id/sortByTimeCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_by_time"
        app:layout_constraintBottom_toTopOf="@+id/radioSortGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.557" />
</androidx.constraintlayout.widget.ConstraintLayout>