<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    tools:context=".ui.LoginFragment">

    <TextView
        android:id="@+id/textViewVxod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/vxod"
        android:textSize="36sp" />

    <EditText
        android:id="@+id/inputLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:ems="10"
        android:gravity="center"
        android:hint="Логин"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:ems="10"
        android:gravity="center"
        android:hint="Пароль"
        android:inputType="textPersonName"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/button_vxod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/vxod" />

    <TextView
        android:id="@+id/textViewRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="285dp"
        android:layout_marginBottom = "10dp"
        android:gravity="center"
        android:text="@string/n"
        android:textSize="12sp" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/registration" />
</LinearLayout>
